# zerohash

./: .gitignore  Cargo.toml  README.md  build-check.sh  build.rs
src/: app_state.rs  batch_hash.rs  batch_pubkey.rs  cli.rs  hasher.cpp  main.rs  stats.rs  turbo_search.rs
src/app_state.rs; zerohash_finder/src/search.rs; zerohash_finder/src/: main.rs
