[package]
name = "zerohash_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-utils = "0.8.20"
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-deque", "crossbeam-queue"] }
hex = "0.4.3"
num_cpus = "1.16.0"
rayon = "1.10.0"
secp256k1 = { version = "0.30.0", features = ["global-context", "rand", "recovery"] }
bs58 = { version = "0.5.1", features = ["check"] }
digest = "0.10.7"
openssl = "0.10.64"
openssl-sys = "0.9"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
ctrlc = "3.4.4"
atomic = "0.6.0"
bitcoin = { version = "0.32.5", features = ["rand", "secp-recovery"] }
sha3 = "0.10.8"
colored = "2.1.0"

# Otimizações de desempenho
faster-hex = "0.10.0"
bytemuck = "1.14.3"
once_cell = "1.19.0"
# Novas dependências para o cache hierárquico
parking_lot = "0.12.1"
lru = "0.10.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
panic = 'abort'
debug = false

[profile.release.package."*"]
opt-level = 3

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
